--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.11d1e385.js"></script>
-    <link rel="stylesheet" href="/assets/index.947cb8f2.css">
+    <script type="module" crossorigin src="/index.11d1e385.js"></script>
+    <link rel="stylesheet" href="/index.947cb8f2.css">
   </head>
   <body>
     <div id="soda_container">
