--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Soda Can</title>
     <script type="module" crossorigin src="/index.11d1e385.js"></script>
     <link rel="stylesheet" href="/index.947cb8f2.css">
   </head>
